src/scss/_singular.scss
.singular {
  &__header {
    margin-bottom: 2rem;
  }
}

.glossary {
  &:not(:first-child) {
    margin-top: 3rem;
  }

  h2 {
    margin-bottom: 2rem;
  }

  &__columns {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
    gap: 1.5rem 4rem;
  }

  &__entry {
    display: grid;
    gap: .25rem;
    font-size: var(--fs-dxs);
    line-height: 1.3;

    &-head {
      display: flex;
      justify-content: space-between;
      gap: 1rem;
      font-family: var(--ff-heading);
    }

    &-name {
      font-weight: var(--font-weight-heading);

      &:not(._full) {
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
      }
    }

    &-meta-item {
      &:not(:last-child)::after {
        content: ' • ';
      }
    }

    &-count {
      flex-shrink: 0;
      color: var(--fg-800);
      font-weight: var(--font-weight-medium);
    }

    &-description {
      color: var(--fg-700);
    }

    a {
      &:hover {
        color: var(--primary-500);
      }
    }
  }
}

.index-letters {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  gap: .5rem;
  margin-bottom: 3rem;

  &__letter {
    display: grid;
    place-content: center;
    font-size: get_clamp(16, 24, 375, 768);
    font-weight: 900;
    line-height: 1;
    border-radius: var(--layout-border-radius-small);
    height: max(2rem, 1.5em);
    width: max(2rem, 1.5em);
    transition: color, background-color;
    transition-duration: var(--transition-duration);

    &:not([disabled]):hover {
      background: var(--pagination-background);
      color: var(--pagination-color);
    }
  }
}

